--- a/interface/interface.glade
+++ b/interface/interface.glade
@@ -6,7 +6,7 @@
     <property name="visible">True</property>
     <property name="title" translatable="yes">Arduino Aplicativo</property>
     <property name="window_position">center-always</property>
-    <property name="default_width">600</property>
+    <property name="default_width">650</property>
     <property name="default_height">500</property>
     <signal name="destroy" handler="gtk_main_quit"/>
     <child>
@@ -215,7 +215,7 @@
                 </child>
                 <child>
                   <widget class="GtkButton" id="button4">
-                    <property name="label" translatable="yes">Reportes</property>
+                    <property name="label" translatable="yes">Gráficar Energias</property>
                     <property name="width_request">145</property>
                     <property name="height_request">25</property>
                     <property name="visible">True</property>
@@ -228,14 +228,14 @@
                   </packing>
                 </child>
                 <child>
-                  <widget class="GtkButton" id="button5">
+                  <widget class="GtkButton" id="buttonSalir">
                     <property name="label" translatable="yes">Salir</property>
                     <property name="width_request">145</property>
                     <property name="height_request">25</property>
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="receives_default">True</property>
-                    <property name="xalign">0.46000000834465027</property>
+                    <signal name="clicked" handler="on_exit_clicked"/>
                   </widget>
                   <packing>
                     <property name="x">5</property>
@@ -244,10 +244,10 @@
                 </child>
                 <child>
                   <widget class="GtkLabel" id="labelTiempo">
-                    <property name="width_request">100</property>
+                    <property name="width_request">70</property>
                     <property name="height_request">25</property>
                     <property name="visible">True</property>
-                    <property name="label" translatable="yes">Tiempo: 0.0s</property>
+                    <property name="label" translatable="yes">Tiempo:</property>
                   </widget>
                   <packing>
                     <property name="x">160</property>
@@ -255,31 +255,32 @@
                   </packing>
                 </child>
                 <child>
-                  <widget class="GtkLabel" id="label2">
-                    <property name="width_request">125</property>
+                  <widget class="GtkLabel" id="labelVelocidad">
+                    <property name="width_request">80</property>
                     <property name="height_request">25</property>
                     <property name="visible">True</property>
-                    <property name="label" translatable="yes">Velocidad: 0.0 m/s</property>
+                    <property name="xalign">0.47999998927116394</property>
+                    <property name="label" translatable="yes">Velocidad:</property>
                   </widget>
                   <packing>
-                    <property name="x">265</property>
+                    <property name="x">280</property>
                     <property name="y">5</property>
                   </packing>
                 </child>
                 <child>
-                  <widget class="GtkLabel" id="label3">
+                  <widget class="GtkLabel" id="labelAngulo">
                     <property name="width_request">60</property>
                     <property name="height_request">25</property>
                     <property name="visible">True</property>
                     <property name="label" translatable="yes">Ángulo:</property>
                   </widget>
                   <packing>
-                    <property name="x">400</property>
+                    <property name="x">420</property>
                     <property name="y">5</property>
                   </packing>
                 </child>
                 <child>
-                  <widget class="GtkEntry" id="entry1">
+                  <widget class="GtkEntry" id="entryArngulo">
                     <property name="width_request">35</property>
                     <property name="height_request">25</property>
                     <property name="visible">True</property>
@@ -287,35 +288,78 @@
                     <property name="invisible_char">●</property>
                   </widget>
                   <packing>
-                    <property name="x">460</property>
+                    <property name="x">485</property>
                     <property name="y">5</property>
                   </packing>
                 </child>
                 <child>
                   <widget class="GtkScrolledWindow" id="scrolledwindow1">
-                    <property name="width_request">430</property>
+                    <property name="width_request">480</property>
                     <property name="height_request">115</property>
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="hscrollbar_policy">automatic</property>
                     <property name="vscrollbar_policy">automatic</property>
                     <child>
-                      <widget class="GtkTextView" id="textview1">
+                      <widget class="GtkTreeView" id="viewData">
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
-                        <property name="text" translatable="yes">Texto de ejemplo
-Texto de ejemplo
-Texto de ejemplo
-Texto de ejemplo
-Texto de ejemplo
-Texto de ejemplo
-Texto de ejemplo</property>
+                        <property name="rubber_banding">True</property>
                       </widget>
                     </child>
                   </widget>
                   <packing>
-                    <property name="x">160</property>
+                    <property name="x">162</property>
                     <property name="y">35</property>
+                  </packing>
+                </child>
+                <child>
+                  <widget class="GtkLabel" id="labelTime">
+                    <property name="width_request">50</property>
+                    <property name="height_request">25</property>
+                    <property name="visible">True</property>
+                    <property name="label" translatable="yes">0:00 s</property>
+                  </widget>
+                  <packing>
+                    <property name="x">220</property>
+                    <property name="y">5</property>
+                  </packing>
+                </child>
+                <child>
+                  <widget class="GtkLabel" id="label1">
+                    <property name="width_request">60</property>
+                    <property name="height_request">25</property>
+                    <property name="visible">True</property>
+                    <property name="label" translatable="yes"> 0.0 m/s</property>
+                  </widget>
+                  <packing>
+                    <property name="x">350</property>
+                    <property name="y">5</property>
+                  </packing>
+                </child>
+                <child>
+                  <widget class="GtkLabel" id="label2">
+                    <property name="width_request">80</property>
+                    <property name="height_request">25</property>
+                    <property name="visible">True</property>
+                    <property name="label" translatable="yes">Distancia:</property>
+                  </widget>
+                  <packing>
+                    <property name="x">530</property>
+                    <property name="y">5</property>
+                  </packing>
+                </child>
+                <child>
+                  <widget class="GtkEntry" id="entryDistancia">
+                    <property name="width_request">35</property>
+                    <property name="height_request">25</property>
+                    <property name="visible">True</property>
+                    <property name="can_focus">True</property>
+                    <property name="invisible_char">●</property>
+                  </widget>
+                  <packing>
+                    <property name="x">610</property>
+                    <property name="y">5</property>
                   </packing>
                 </child>
               </widget>
@@ -343,6 +387,7 @@ Texto de ejemplo</property>
   </widget>
   <widget class="GtkAboutDialog" id="aboutDialog">
     <property name="border_width">5</property>
+    <property name="window_position">center</property>
     <property name="type_hint">normal</property>
     <property name="program_name">ardu-mrua</property>
     <property name="version">0.1</property>
@@ -359,15 +404,18 @@ Version 3, 29 June 2007
 Copyright © 2007 Free Software Foundation, Inc. &lt;http://fsf.org/&gt;
 
 Everyone is permitted to copy and distribute verbatim copies of this license document, but changing it is not allowed.
+
 Preamble
 
 The GNU General Public License is a free, copyleft license for software and other kinds of works.
 
 The licenses for most software and other practical works are designed to take away your freedom to share and change the works. By contrast, the GNU General Public License is intended to guarantee your freedom to share and change all versions of a program--to make sure it remains free software for all its users. We, the Free Software Foundation, use the GNU General Public License for most of our software; it applies also to any other work released this way by its authors. You can apply it to your programs, too.
 
-When we speak of free software, we are referring to freedom, not price. Our General Public Licenses are designed to make sure that you have the freedom to distribute copies of free software (and charge for them if you wish), that you receive source code or can get it if you want it, that you can change the software or use pieces of it in new free programs, and that you know you can do these things.
+When we speak of free software, we are referring to freedom, not price. 
+Our General Public Licenses are designed to make sure that you have the freedom to distribute copies of free software (and charge for them if you wish), that you receive source code or can get it if you want it, that you can change the software or use pieces of it in new free programs, and that you know you can do these things.
 
-To protect your rights, we need to prevent others from denying you these rights or asking you to surrender the rights. Therefore, you have certain responsibilities if you distribute copies of the software, or if you modify it: responsibilities to respect the freedom of others.
+To protect your rights, we need to prevent others from denying you these 
+rights or asking you to surrender the rights. Therefore, you have certain responsibilities if you distribute copies of the software, or if you modify it: responsibilities to respect the freedom of others.
 
 For example, if you distribute copies of such a program, whether gratis or for a fee, you must pass on to the recipients the same freedoms that you received. You must make sure that they, too, receive or can get the source code. And you must show them these terms so they know their rights.
 
@@ -563,7 +611,8 @@ To do so, attach the following notices to the program. It is safest to attach th
     You should have received a copy of the GNU General Public License
     along with this program.  If not, see &lt;http://www.gnu.org/licenses/&gt;.</property>
     <property name="authors">Jotam Junio Trejo &lt;jotamjr@gmail.com&gt;
-Julio César Brizuelav &lt;brizuelaalvarado@gmail.com&gt;</property>
+Julio César Brizuela &lt;brizuelaalvarado@gmail.com&gt;</property>
+    <property name="wrap_license">True</property>
     <child internal-child="vbox">
       <widget class="GtkVBox" id="dialog-vbox1">
         <property name="visible">True</property>
@@ -579,7 +628,7 @@ Julio César Brizuelav &lt;brizuelaalvarado@gmail.com&gt;</property>
           <packing>
             <property name="expand">False</property>
             <property name="pack_type">end</property>
-            <property name="position">0</property>
+            <property name="position">-1</property>
           </packing>
         </child>
       </widget>
