--- a/interface/interface.glade
+++ b/interface/interface.glade
@@ -342,19 +342,6 @@
                   </packing>
                 </child>
                 <child>
-                  <widget class="GtkEntry" id="entryAngulo">
-                    <property name="width_request">35</property>
-                    <property name="height_request">25</property>
-                    <property name="visible">True</property>
-                    <property name="can_focus">True</property>
-                    <property name="invisible_char">&#x25CF;</property>
-                  </widget>
-                  <packing>
-                    <property name="x">485</property>
-                    <property name="y">5</property>
-                  </packing>
-                </child>
-                <child>
                   <widget class="GtkScrolledWindow" id="scrolledwindow1">
                     <property name="width_request">480</property>
                     <property name="height_request">115</property>
@@ -421,6 +408,25 @@
                   </widget>
                   <packing>
                     <property name="x">610</property>
+                    <property name="y">5</property>
+                  </packing>
+                </child>
+                <child>
+                  <widget class="GtkComboBox" id="entryAngulo">
+                    <property name="width_request">50</property>
+                    <property name="height_request">25</property>
+                    <property name="visible">True</property>
+                    <property name="items" translatable="yes">15
+30
+45
+60
+75
+90
+</property>
+                    <signal name="changed" handler="on_entryAngulo_changed"/>
+                  </widget>
+                  <packing>
+                    <property name="x">485</property>
                     <property name="y">5</property>
                   </packing>
                 </child>
